		Windows-specific changes to R
		=============================

See the file NEWS for changes that affect all versions of R.


rw2000
======

Added Rgui script editor by Chris Jackson.  Supports object name
in window caption in edit() and fix().

Changed preferences menu "Finish" to "OK".

Changed search order for user home directory to use "My Documents" 
directory.

Added functions setWindowTitle(), getWindowTitle(), and 
getIdentification().

Added function getWindowsHandle().



rw1091
======

Installing a package with a saved image was not exiting on an error
making the image (PR#6769).

Installing a package which failed did not return an error code from
Rcmd INSTALL (PR#6768).

choose.files(multi=FALSE) was liable to give incorrect results (PR#6818).

Workaround for bug in Microsoft critical update KB835732:  if HOMEPATH
environment variable is not set properly, R would not start (PR#6802).

Under ESS, Rterm would freeze when quitting (PR#6812).

The file.show code failed to close its FindFirst handle and so the
directory on which it was used (often the R temporary directory) could
not be deleted from within R.

If a graphics window is opened in a minimized MDI session, it now
uses the physical monitor size instead of the zero-sized MDI frame.



rw1090
======

Both Rterm and Rgui now give usage information via the --help or -h
command-line flag.

There is now a "Misc|Break to debugger" menu option, enabled 
when a debugger is detected (somewhat fallibly), or infallibly by the
"--debug" command line option.  This will cause a trap to an external
debugger, e.g. for running Rgui under gdb.  If the menu item is
selected when not running under a debugger R is likely to crash.
If the "--debug" option is used, R will break to the debugger during
command line processing, allowing the startup process to be debugged.

Added "stay" argument to bringToTop(), to allow the user to specify
that a window should stay on top of other windows.  Also added "stay